// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultSlippageModal edge cases handles empty slippage options 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "textAlign": "center",
          },
        ]
      }
    >
      Set your slippage tolerance
    </Text>
  </View>
  <View>
    <View
      testID="default-slippage-button-group"
    />
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityLabel="Submit"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#131416",
            "borderRadius": 12,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
            "width": "100%",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Submit
      </Text>
    </View>
  </View>
</View>
`;

exports[`DefaultSlippageModal snapshot tests matches snapshot for complete modal 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "textAlign": "center",
          },
        ]
      }
    >
      Set your slippage tolerance
    </Text>
  </View>
  <View>
    <View
      testID="default-slippage-button-group"
    >
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-auto"
      >
        <Text>
          Auto
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-0.5"
      >
        <Text>
          0.5%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-2"
      >
        <Text>
          2%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-3"
      >
        <Text>
          3%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-custom"
      >
        <Text>
          Custom
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityLabel="Submit"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#131416",
            "borderRadius": 12,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
            "width": "100%",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Submit
      </Text>
    </View>
  </View>
</View>
`;

exports[`DefaultSlippageModal snapshot tests matches snapshot for description: description style 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "textAlign": "center",
          },
        ]
      }
    >
      Set your slippage tolerance
    </Text>
  </View>
  <View>
    <View
      testID="default-slippage-button-group"
    >
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-auto"
      >
        <Text>
          Auto
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-0.5"
      >
        <Text>
          0.5%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-2"
      >
        <Text>
          2%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-3"
      >
        <Text>
          3%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-custom"
      >
        <Text>
          Custom
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityLabel="Submit"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#131416",
            "borderRadius": 12,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
            "width": "100%",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Submit
      </Text>
    </View>
  </View>
</View>
`;

exports[`DefaultSlippageModal snapshot tests matches snapshot for header: header style 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "textAlign": "center",
          },
        ]
      }
    >
      Set your slippage tolerance
    </Text>
  </View>
  <View>
    <View
      testID="default-slippage-button-group"
    >
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-auto"
      >
        <Text>
          Auto
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-0.5"
      >
        <Text>
          0.5%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-2"
      >
        <Text>
          2%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-3"
      >
        <Text>
          3%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-custom"
      >
        <Text>
          Custom
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityLabel="Submit"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#131416",
            "borderRadius": 12,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
            "width": "100%",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Submit
      </Text>
    </View>
  </View>
</View>
`;

exports[`DefaultSlippageModal snapshot tests matches snapshot for submit button: submit button style 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "textAlign": "center",
          },
        ]
      }
    >
      Set your slippage tolerance
    </Text>
  </View>
  <View>
    <View
      testID="default-slippage-button-group"
    >
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-auto"
      >
        <Text>
          Auto
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-0.5"
      >
        <Text>
          0.5%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-2"
      >
        <Text>
          2%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-3"
      >
        <Text>
          3%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-custom"
      >
        <Text>
          Custom
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityLabel="Submit"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#131416",
            "borderRadius": 12,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
            "width": "100%",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Submit
      </Text>
    </View>
  </View>
</View>
`;

exports[`DefaultSlippageModal snapshot tests matches snapshot with auto selected 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "textAlign": "center",
          },
        ]
      }
    >
      Set your slippage tolerance
    </Text>
  </View>
  <View>
    <View
      testID="default-slippage-button-group"
    >
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-auto"
      >
        <Text>
          Auto
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-0.5"
      >
        <Text>
          0.5%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-2"
      >
        <Text>
          2%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-3"
      >
        <Text>
          3%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-custom"
      >
        <Text>
          Custom
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityLabel="Submit"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#131416",
            "borderRadius": 12,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
            "width": "100%",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Submit
      </Text>
    </View>
  </View>
</View>
`;

exports[`DefaultSlippageModal snapshot tests matches snapshot with numeric slippage selected 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "textAlign": "center",
          },
        ]
      }
    >
      Set your slippage tolerance
    </Text>
  </View>
  <View>
    <View
      testID="default-slippage-button-group"
    >
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-auto"
      >
        <Text>
          Auto
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-0.5"
      >
        <Text>
          0.5%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-2"
      >
        <Text>
          2%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-3"
      >
        <Text>
          3%
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[MockFunction]}
        testID="option-custom"
      >
        <Text>
          Custom
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityLabel="Submit"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#131416",
            "borderRadius": 12,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
            "width": "100%",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Submit
      </Text>
    </View>
  </View>
</View>
`;
